# applybot

./: .gitignore  README.md  pyproject.toml
applybot/: apply.py  cli.py  config.py  contextual.py  dashboard.py  generator.py  pipeline.py  scorer.py  scraper.py  tracker.py  wizard.py
applybot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
applybot/templates/: dashboard.html  master_resume.md
installers/: install.bat  install.sh
tests/: conftest.py  test_apply.py  test_cli.py  test_config.py  test_contextual.py  test_dashboard.py  test_generator.py  test_login.py  test_pipeline.py  test_scorer.py  test_scraper.py  test_tracker.py  test_wizard.py
