[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "applybot"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "prompt_toolkit>=3.0",
    "python-docx>=1.1",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "rich>=13.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40"]
llm = ["anthropic>=0.20", "openai>=1.10"]
dev = ["pytest>=8.0", "pytest-cov", "responses>=0.25"]

[project.scripts]
applybot = "applybot.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
